老师项目成功显示

--- a/src/main/webapp/dxt1.0/student-project-info.html
+++ b/src/main/webapp/dxt1.0/student-project-info.html
@@ -86,7 +86,7 @@
 
 <br>
 
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <a data-toggle="modal" data-target="#myModal" >
         <input type="submit"  value="申请" class="btn btn-default">
             </a>
