--- a/src/main/webapp/dxt1.0/student-project-info.html
+++ b/src/main/webapp/dxt1.0/student-project-info.html
@@ -41,45 +41,45 @@
             <div class="row">
                 <div class="col-md-5 col-md-offset-1">
                     <p class="text-muted">项目名称</p>
-                    <input type="text" class="form-control"  name="name">
+                    <input type="text" class="form-control" readonly  name="name">
                 </div>
                 <div class="col-md-5 ">
                     <p class="text-muted">项目描述</p>
-                    <input type="text" class="form-control"  name="info">
+                    <input type="text" class="form-control" readonly  name="info">
                 </div>
             </div>
             <br>
             <div class="row">
                 <div class="col-md-5 col-md-offset-1">
                     <p class="text-muted">项目关键字</p>
-                    <input type="text" class="form-control"  name="keyWord">
+                    <input type="text" class="form-control" readonly  name="keyWord">
                 </div>
                 <div class="col-md-5">
 
                     <p class="text-muted" >申请截止日期</p>
-                    <input type="text" class="form-control"  name="applyBeforeDate">
+                    <input type="text" class="form-control" readonly  name="applyBeforeDate">
                 </div>
             </div>
             <br>
             <div class="row">
                 <div class="col-md-5 col-md-offset-1">
                     <p class="text-muted">团队数上限</p>
-                    <input type="text" class="form-control" name="teamMax">
+                    <input type="text" class="form-control" readonly name="teamMax">
                 </div>
                 <div class="col-md-5">
                     <p class="text-muted">当前团队数</p>
-                    <input type="text" class="form-control"  name="teamNumber">
+                    <input type="text" class="form-control" readonly  name="teamNumber">
                 </div>
             </div>
             <br>
             <div class="row">
                 <div class="col-md-5 col-md-offset-1">
                     <p class="text-muted">相关要求</p>
-                    <input type="text" class="form-control"  name="requirement">
+                    <input type="text" class="form-control" readonly  name="requirement">
                 </div>
                 <div class="col-md-5">
                     <p class="text-muted">项目截止时间</p>
-                    <input type="text" class="form-control"  name="finishDate">
+                    <input type="text" class="form-control" readonly  name="finishDate">
                 </div>
             </div>
 
