搜索项目转跳成功

--- a/src/main/webapp/dxt1.0/student-project-info.html
+++ b/src/main/webapp/dxt1.0/student-project-info.html
@@ -136,10 +136,6 @@
 
 <script src="js/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
-<script>
-    $(function () {
-        $("#pt").test(sessionStorage.getItem("key1"));
-    })
-</script>
+<script src="js/student/fsy-student-project-info.js"></script>
 </body>
 </html>
