--- a/src/main/webapp/dxt1.0/student-search.html
+++ b/src/main/webapp/dxt1.0/student-search.html
@@ -33,7 +33,7 @@
 </nav>
 <br><br><br><br><br><br><br><br><br><br><br><br>
 <div id="formshowDiv">
-    <form id="searchorm">
+    <form id="searchform">
         <div class="container">
             <div class="row">
                 <div class="col-md-6 col-md-offset-3">
