学生基本通过

--- a/src/main/webapp/dxt1.0/student-project-info.html
+++ b/src/main/webapp/dxt1.0/student-project-info.html
@@ -101,9 +101,7 @@
                         </h4>
                     </div>
                     <div class="modal-body">
-                        <p id="teamDom" align="center">
-
-                        </p>
+                        <p id="teamDom" align="center"></p>
                     </div>
                     <div class="modal-footer">
                         <p align="center">
