--- a/src/main/webapp/dxt1.0/teacher-project-info.html
+++ b/src/main/webapp/dxt1.0/teacher-project-info.html
@@ -36,7 +36,8 @@
 <br><br><br><br><br>
 
 
-
+接收到的id是
+<p id="pt"></p>
 
     <div class="container">
             <div class="row">
@@ -105,6 +106,7 @@
         </div>
     </div>
 </div>
+    </div>
 <br>
 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -120,7 +122,10 @@
 
 <script src="js/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
-
-
+<script>
+    $(function () {
+        $("#pt").text(sessionStorage.getItem("itemId"));
+    })
+</script>
 </body>
 </html>
