--- a/src/main/webapp/dxt1.0/teacher-search.html
+++ b/src/main/webapp/dxt1.0/teacher-search.html
@@ -28,7 +28,7 @@
                 <li><a href="#"><span class="glyphicon glyphicon-fire"></span> 发布</a></li>
                 <li class="active"><a href="teacher-selfcenter-main.html"><span class="glyphicon glyphicon-user"></span> 个人中心</a></li>
                 <li><a href="project-platform-teacher.html"><span class="glyphicon glyphicon-question-sign"></span> 项目平台</a></li>
-                <li><a href="search-teacher.html"><span class="glyphicon glyphicon-pencil"></span> 搜索项目</a></li>
+                <li><a href="teacher-search.html"><span class="glyphicon glyphicon-pencil"></span> 搜索项目</a></li>
             </ul>
         </div>
 </nav>
