--- a/src/main/webapp/dxt1.0/student-project-info.html
+++ b/src/main/webapp/dxt1.0/student-project-info.html
@@ -27,7 +27,7 @@
                 <li ><a href="student-teams.html"><span class="glyphicon glyphicon-list"></span> 我的团队</a></li>
                 <li><a href="student-selfcenter-main.html"><span class="glyphicon glyphicon-user"></span> 个人中心</a></li>
                 <li><a href="project-platform-student.html"><span class="glyphicon glyphicon-question-sign"></span> 项目平台</a></li>
-                <li><a href="search-student.html"><span class="glyphicon glyphicon-question-sign"></span> 搜索项目</a></li>
+                <li><a href="student-search.html"><span class="glyphicon glyphicon-question-sign"></span> 搜索项目</a></li>
             </ul>
         </div>
     </div>
@@ -100,16 +100,18 @@
                         选择团队
                     </h4>
                 </div>
-                <div class="modal-body">
-                    <p id="teamDom" align="center">
+                <form id="selectTeam">
+                    <div class="modal-body">
+                        <p id="teamDom" align="center">
 
-                    </p>
-                </div>
-                <div class="modal-footer">
-                    <p align="center">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">确定</button>
-                    </p>
-                </div>
+                        </p>
+                    </div>
+                    <div class="modal-footer">
+                        <p align="center">
+                            <button id="applyItemButton" type="button" class="btn btn-default" data-dismiss="modal">确定</button>
+                        </p>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
