--- a/src/main/webapp/dxt1.0/teacher-project-info.html
+++ b/src/main/webapp/dxt1.0/teacher-project-info.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/Ec-style.css">
+    <link href="css/bootstrap-datetimepicker.min.css" rel="stylesheet"/>
     <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
 </head>
 <body>
@@ -28,7 +29,7 @@
                 <li><a href="#"><span class="glyphicon glyphicon-fire"></span> 发布</a></li>
                 <li><a href="teacher-selfcenter-main.html"><span class="glyphicon glyphicon-user"></span> 个人中心</a></li>
                 <li class="active"><a href="project-platform-student.html"><span class="glyphicon glyphicon-question-sign"></span> 项目平台</a></li>
-                <li><a href="search-teacher.html"><span class="glyphicon glyphicon-question-sign"></span> 搜索项目</a></li>
+                <li><a href="teacher-search.html"><span class="glyphicon glyphicon-question-sign"></span> 搜索项目</a></li>
             </ul>
         </div>
     </div>
@@ -102,12 +103,66 @@
                 </div>
             </div>
         </div>
+
+
+                <a data-toggle="modal" data-target="#myModal" >
+                    <button type="submit" class="btn btn-default" value="发布任务">发布任务</button>
+                </a>
+
+                <div class="modal fade" id="myModal" role="dialog">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <button type="button" class="close" data-dismiss="modal">
+                                    <span>×</span>
+                                </button>
+                                <h4 class="modal-title" id="myModalLabel">
+                                    任务信息
+                                </h4>
+                            </div>
+                            <div class="modal-body">
+                                <p align="center">
+                                    <div class="container">
+                                        <div class="row">
+                                            <div class="col-md-5 col-md-offset-1">
+                                <p class="text-muted">任务名称</p>
+                                <input type="text" class="form-control" name="title">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-5 col-md-offset-1">
+                                <p class="text-muted">任务内容</p>
+                                <input type="text" class="form-control" name="content">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-5 col-md-offset-1">
+                                <p class="text-muted">截止日期</p>
+                                <input type="text" class="form-control" name="targetDate" id="datetimepicker">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="modal-footer">
+                    <p align="center">
+                        <button type="button" class="btn btn-default"
+                                data-dismiss="modal">
+                            确定
+                        </button>
+                    </p>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
-    </div>
 <br>
 
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
 <footer id="footer">
     <div class="container">
@@ -121,5 +176,12 @@
 <script src="js/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/teacher/fsy-teacher-project-info.js"></script>
+<script type="text/javascript" src="js/bootstrap-datetimepicker.js"></script>
+<script type="text/javascript" src="js/bootstrap-datetimepicker.fr.js"></script>
+<script type="text/javascript">
+    $('#datetimepicker').datetimepicker({
+        format: 'yyyy-mm-dd hh:ii'      /*此属性是显示顺序，还有显示顺序是mm-dd-yyyy*/
+    });
+</script>
 </body>
 </html>
