--- a/src/main/webapp/dxt1.0/student-new-team.html
+++ b/src/main/webapp/dxt1.0/student-new-team.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/Ec-style.css">
-
+    <link href="css/bootstrap-datetimepicker.min.css" rel="stylesheet" />
 </head>
 <body>
 
@@ -27,6 +27,7 @@
                 <li ><a href="student-teams.html"><span class="glyphicon glyphicon-list"></span> 我的团队</a></li>
                 <li><a href="student-selfcenter-main.html"><span class="glyphicon glyphicon-user"></span> 个人中心</a></li>
                 <li><a href="project-platform-student.html"><span class="glyphicon glyphicon-question-sign"></span> 项目平台</a></li>
+                <li><a href="search-student.html"><span class="glyphicon glyphicon-question-sign"></span> 搜索项目</a></li>
             </ul>
         </div>
     </div>
@@ -40,19 +41,23 @@
     <div class="container">
     <div class="form-group">
         <label>团队名称</label>
-        <input type="text" class="form-control" placeholder="请输入团队名称" autofocus >
+        <input type="text" class="form-control" placeholder="请输入团队名称" autofocus name="name" >
     </div>
     <div class="form-group">
         <label>团队最大成员数</label>
-        <input type="number" class="form-control" placeholder="请输入团队人数" min="2" max="5">
+        <input type="number" class="form-control" placeholder="请输入团队人数" name="memberMax">
     </div>
 
     <div class="form-group">
         <label>团队描述</label>
-        <input type="text" class="form-control" width="150px" height="400px" placeholder="请输入团队描述" size="100">
+        <input type="text" class="form-control" width="150px" height="400px" placeholder="请输入团队描述" size="100" name="description">
+    </div>
+    <div class="form-group">
+        <label>项目创建日期</label>
+        <input type="text" value="2014-09-23 23:05" name="createDate" id="datetimepicker" >
     </div>
     <div>
-        <button type="submit" class="btn btn-default">提交</button>
+        <input type="submit" class="btn btn-default" value="提交" onclick="javascript:window.location.href='student-success.html'">
         <button type="reset"  class="btn btn-default" >重置</button>
     </div>
     </div>
@@ -73,5 +78,12 @@
 
 <script src="js/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
+<script type="text/javascript" src="js/bootstrap-datetimepicker.js"></script>
+<script type="text/javascript" src="js/bootstrap-datetimepicker.fr.js"></script>
+<script type="text/javascript">
+    $('#datetimepicker').datetimepicker({
+        format: 'yyyy-mm-dd hh:ii'      /*此属性是显示顺序，还有显示顺序是mm-dd-yyyy*/
+    });
+</script>
 </body>
 </html>
