--- a/src/main/webapp/dxt1.0/student-new-team.html
+++ b/src/main/webapp/dxt1.0/student-new-team.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/Ec-style.css">
     <link href="css/bootstrap-datetimepicker.min.css" rel="stylesheet" />
+    <style type="text/css">
+        label.error{color:red;font-size:13px;}
+    </style>
 </head>
 <body>
 
@@ -37,11 +40,11 @@
 
 
 
-<form>
+<form id="newTeamForm">
     <div class="container">
     <div class="form-group">
         <label>团队名称</label>
-        <input type="text" class="form-control" placeholder="请输入团队名称" autofocus name="name" >
+        <input type="text" class="form-control" placeholder="请输入团队名称" autofocus name="teamName" >
     </div>
     <div class="form-group">
         <label>团队最大成员数</label>
@@ -57,7 +60,7 @@
         <input type="text" value="2014-09-23 23:05" name="createDate" id="datetimepicker" >
     </div>
     <div>
-        <input type="submit" class="btn btn-default" value="提交" onclick="javascript:window.location.href='student-success.html'">
+        <input id="submitButton" type="submit" class="btn btn-default" value="提交">
         <button type="reset"  class="btn btn-default" >重置</button>
     </div>
     </div>
@@ -85,5 +88,7 @@
         format: 'yyyy-mm-dd hh:ii'      /*此属性是显示顺序，还有显示顺序是mm-dd-yyyy*/
     });
 </script>
+<script src="js/student/fsy-student-new-team.js"></script>
+<script type="text/javascript" src="js/jquery.validate.js"></script>
 </body>
 </html>
