--- a/src/main/webapp/dxt1.0/student-team-search.html
+++ b/src/main/webapp/dxt1.0/student-team-search.html
@@ -63,7 +63,6 @@
 
 <script src="js/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
-<script src="js/fsy-js.js"></script>
-<script src="js/fsy-search.js"></script>
+<script src="js/student/fsy-student-team-search.js"></script>
 </body>
 </html>
