--- a/src/main/webapp/dxt1.0/teacher-teams.html
+++ b/src/main/webapp/dxt1.0/teacher-teams.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>老师团队</title>
+    <title>老师查看团队</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/Ec-style.css">
+
 
 </head>
-<body>
+<br>
 
 <nav class="navbar navbar-default navbar-fixed-top" >
     <div class="container">
@@ -24,10 +24,11 @@
         <div class="collapse navbar-collapse" id="navbar-collapse">
             <ul class="nav navbar-nav navbar-right" style="margin-top:0">
                 <li ><a href="teacher-projects.html"><span class="glyphicon glyphicon-home"></span> 已有项目</a></li>
-                <li class="active"><a href="teacher-teams.html"><span class="glyphicon glyphicon-list"></span> 团队管理</a></li>
+                <li ><a href="teacher-teams.html"><span class="glyphicon glyphicon-list"></span> 团队管理</a></li>
                 <li><a href="#"><span class="glyphicon glyphicon-fire"></span> 发布</a></li>
                 <li><a href="teacher-selfcenter-main.html"><span class="glyphicon glyphicon-user"></span> 个人中心</a></li>
                 <li><a href="project-platform-teacher.html"><span class="glyphicon glyphicon-question-sign"></span> 项目平台</a></li>
+                <li><a href="search-teacher.html"><span class="glyphicon glyphicon-question-sign"></span> 搜索项目</a></li>
             </ul>
         </div>
     </div>
@@ -35,42 +36,26 @@
 <br><br><br><br>
 <div class="container">
     <div class="row">
-        <div class="col-md-5 col-md-offset-7">
-            <div class="col-md-6 ">
-                <input type="text" class="form-control" age="search" placeholder="输入要搜索的团队名">
-            </div>
-            <div class="col-md-2.5 col-md-offset-0.5">
-                <input type="submit" value="搜索" class="btn btn-default " onclick="javascript:window.location.href='teacher-team-info.html'">
+        <div class="col-md-4 col-md-offset-8">
+            <div class="col-md-5 col-md-offset-1">
+                <input type="button" value="搜索团队"  class="btn btn-default " onclick="javascript:window.location.href='teacher-team-search.html'">
             </div>
         </div>
     </div>
 </div>
-<br><br>
+</br></br>
 <div class="container">
-<div class="list-group">
-    <a href="#" class="list-group-item ">
-        <h4>壮志雄心</h4>
-    </a>
-    <a href="teacher-team-info.html" class="list-group-item ">
-        <h4>ustcwings</h4>
-    </a>
-    <a href="#" class="list-group-item ">
-        <h4>BBweb</h4>
-    </a>
-    <a href="#" class="list-group-item ">
-        <h4>你好可达鸭</h4>
-    </a>
+    <div id="domBox" class="list-group">
+
+    </div>
+
+    <ul class="pager">
+        <li><a href="javascript:;" id="preDom">上一页</a></li>
+        <li id="list"></li>
+        <li><a href="javascript:;" id="nextDom">下一页</a></li>
+    </ul>
 </div>
 
-<ul class="pagination pagination-lg ">
-    <li><a href="#">&laquo;</a></li>
-    <li class="active"><a href="#">1</a></li>
-    <li><a href="#">2</a></li>
-    <li ><a href="#">3</a></li>
-    <li><a href="#">4</a></li>
-    <li><a href="#">&raquo;</a></li>
-</ul>
-</div>
 
 <footer id="footer">
     <div class="container">
@@ -86,5 +71,6 @@
 
 <script src="js/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
+<script src="js/teacher/fsy-teacher-teams.js"></script>
 </body>
 </html>
